--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       inspire:
-        image: pdokdev/inspire-validator:test
+        image: docker.pkg.github.com/inspire-eu-validation/community/inspire-validator:2020.3
         ports: 
           - 8080:8080
     steps:
