--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       inspire:
-        image: docker.pkg.github.com/inspire-eu-validation/community/inspire-validator:latest
+        image: docker.pkg.github.com/inspire-eu-validation/community/inspire-validator:2020.3
         credentials:
           username: koalapdok
           password: ${{ secrets.PDOK_KOALA_PERSONAL_ACCESS_TOKEN }}
@@ -35,7 +35,7 @@ jobs:
           do
              sleep 10
              [[ counter -eq $max_retry ]] && echo "Could not connect to inspire validation" && exit 1
-             #echo "Trying again. Try #$counter"#use to debug
+             echo "Trying again. Try #$counter"#use to debug
              ((counter++))
           done
 
