--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,7 +35,8 @@ jobs:
           do
              sleep 10
              [[ counter -eq $max_retry ]] && echo "Could not connect to inspire validation" && exit 1
-             echo "Trying again. Try #$counter"#use to debug
+             #Use to debug
+             echo "Trying again. Try #$counter"
              ((counter++))
           done
 
